# m5tab5-emulator

./: .gitignore  ARCHITECTURAL_GAP_ANALYSIS.md  ARCHITECTURE.md  ARCHON_PROJECT_STATUS.md  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.backup  COMPREHENSIVE_GAP_ANALYSIS.md  ESP32P4_BOOT_IMPLEMENTATION_SUMMARY.md  ESP32P4_ELF_LOADER_IMPLEMENTATION.md  ESP32_P4_MEMORY_LAYOUT_IMPLEMENTATION.md  FIRMWARE_LOADING_GUI.md  GUI_PROFESSIONAL_SPRINT_PLAN.md  GUI_PROTOTYPE_REPORT.md  GUI_SPRINT_PLAN.md  GUI_TEST_REPORT.md  IMPLEMENTATION.md  IMPLEMENTATION_STRATEGY.md  MEMORY_ANALYSIS.md  MENU_SYSTEM_IMPLEMENTATION.md  MILESTONE_COMPLETION_REPORT.md  PRODUCTION_LAUNCH_SUMMARY.md  README.md  SPIFFS_IMPLEMENTATION_SUMMARY.md  SPI_IMPLEMENTATION_SUMMARY.md  SPRINT_PLANNING.md  STORAGE_INTEGRATION_SPRINT4_SUMMARY.md  archon rules.txt  build_and_test_gui.sh  build_menu_test.sh  m5tab5-emulator-config.cmake  main.cpp  main_gui.cpp  simple_cpu_test.cpp  simple_firmware_demo.cpp  simple_memory_test.cpp  test_boot_rom.cpp  test_display_connection  test_display_connection.cpp  test_elf_loader.cpp  (+18 more)
.claude/: prd.md
build-analysis/: test_display_connection
build-debug/: m5tab5-emulator-gui
build-debug/tools/: m5tab5-config
cmake/: m5tab5-emulator-config.cmake.in
config/: default.json  development.json
docs/: DEVELOPMENT.md  NVS_PERSISTENCE_IMPLEMENTATION.md  USAGE.md  developer-guide.md  user-guide.md
docs/api/: README.md
examples/: CMakeLists.txt  README.md  basic_emulator.cpp  elf_loading_demo.cpp  esp_idf_spi_demo.cpp  freertos_integration_test.cpp  gpio_control.cpp  simple_freertos_test.cpp  spiffs_example.cpp  storage_comprehensive_test.cpp  uart_industrial_demo.cpp
firmware/: CMakeLists.txt  firmware_manifest.json  freertos_test_firmware.cpp  m5tab5_test_firmware.cpp
include/emulator/audio/: audio_pipeline.hpp
include/emulator/config/: configuration.hpp
include/emulator/connectivity/: bluetooth_controller.hpp  rs485_controller.hpp  usb_controller.hpp  wifi_controller.hpp
include/emulator/core/: emulator_core.hpp  types.hpp
include/emulator/cpu/: cpu_core.hpp  dual_core_manager.hpp  instruction_decoder.hpp  instruction_set.hpp  register_file.hpp  syscall_interface.hpp
include/emulator/debug/: debug_interface.hpp  debug_types.hpp  debugger.hpp  gdb_server.hpp  optimization_analyzer.hpp  profiler.hpp  regression_detector.hpp  resource_monitor.hpp
include/emulator/esp_idf/: esp32p4_bootloader.hpp  esp_err.h  esp_flash.h  esp_heap_caps.h  esp_idf.h  esp_idf_integration.h  esp_log.h  esp_partition.h  esp_spiffs.h  esp_system.h  esp_system_call_interface.h  esp_timer.h  esp_types.h  freertos_api.hpp  nvs.h
include/emulator/firmware/: boot_sequencer.hpp  elf_loader.hpp  elf_parser.hpp  firmware_integration.hpp  firmware_loader.hpp
plugins/: CMakeLists.txt  example_analyzer.cpp  example_peripheral.cpp
src/audio/: audio_pipeline.cpp
src/config/: configuration.cpp
src/connectivity/: bluetooth_controller.cpp  rs485_controller.cpp  usb_controller.cpp  wifi_controller.cpp
src/core/: emulator_core.cpp
src/cpu/: cpu_core.cpp  dual_core_manager.cpp  instruction_decoder.cpp  instruction_execution.cpp  register_file.cpp  register_file.cpp.disabled  syscall_interface.cpp
src/debug/: debugger.cpp  gdb_server.cpp  profiler.cpp
src/esp_idf/: esp32p4_bootloader.cpp  esp_err_api.cpp  esp_flash_api.cpp.disabled  esp_heap_caps_api.cpp  esp_idf_init.cpp  esp_idf_integration.cpp  esp_log_api.cpp  esp_partition_api.cpp.disabled  esp_spiffs_api.cpp.disabled  esp_system_api.cpp  esp_system_call_interface.cpp  esp_timer_api.cpp  freertos_api.cpp  nvs_api.cpp  nvs_api_complex.cpp.disabled
src/firmware/: boot_sequencer.cpp  elf_loader.cpp  elf_parser.cpp  firmware_integration.cpp  firmware_loader.cpp
src/freertos/: cpu_integration.cpp  freertos_kernel.cpp  synchronization.cpp  task.cpp  task_scheduler.cpp
src/graphics/: display_adapter.cpp  framebuffer.cpp  framebuffer_bridge.cpp  graphics_engine.cpp  sdl_renderer.cpp  touch_input.cpp
src/gui/: control_panels.cpp  firmware_dialog.cpp  firmware_manager.cpp  gui_stubs.cpp  main_window.cpp  memory_inspector.cpp  menu_bar.cpp  personality_manager.cpp
src/memory/: boot_rom.cpp  cache_coherency.cpp  cache_controller.cpp  dma_controller.cpp  memory_controller.cpp  memory_controller_stub.cpp.disabled  memory_region.cpp  mpu.cpp  mpu.cpp.disabled  performance_monitor.cpp
src/peripherals/: adc_controller.cpp  bmi270_imu.cpp  clock_management_unit.cpp  display_controller.cpp  es7210_aec.cpp  es8388_codec.cpp  gpio_controller.cpp  gt911_touch.cpp  i2c_controller.cpp  interrupt_controller.cpp  microphone_array.cpp  mipi_dsi_display.cpp  peripheral_base.cpp  peripheral_manager.cpp  pin_mux_controller.cpp  power_management_unit.cpp  pwm_controller.cpp  sc2356_camera.cpp  sensor_fusion.cpp  spi_controller.cpp  timer_controller.cpp  uart_controller.cpp
src/plugin/: plugin_host.cpp  plugin_loader.cpp  plugin_manager.cpp
src/storage/: flash_controller.cpp  flash_controller.cpp.backup  nvs_controller.cpp.disabled  nvs_controller_ops.cpp.disabled  nvs_placeholder.cpp  nvs_stub.cpp.disabled  ota_manager.cpp  partition_table.cpp  spiffs_filesystem.cpp  vfs_manager.cpp
src/utils/: error.cpp  logging.cpp  shutdown_manager.cpp
tests/: CMakeLists.txt  integration_test_main.cpp  performance_test_main.cpp  test_bluetooth_controller.cpp  test_bmi270_imu.cpp  test_configuration.cpp  test_connectivity_stack.cpp  test_cpu_core.cpp  test_cpu_performance.cpp  test_error_handling.cpp  test_esp_idf_spi.cpp  test_esp_idf_uart.cpp  test_gpio_controller.cpp  test_graphics_performance.cpp  test_i2c_controller.cpp  test_main.cpp  test_memory_controller.cpp  test_memory_performance.cpp  test_performance_profiling.cpp  test_peripheral_coordination.cpp  test_rs485_controller.cpp  test_sensor_fusion.cpp  test_spi_controller.cpp  test_system_integration.cpp  test_uart_controller.cpp  test_usb_controller.cpp  test_wifi_controller.cpp
tools/: CMakeLists.txt  config_tool.cpp  m5tab5-config  m5tab5-memory-inspector  memory_inspector.cpp  plugin_manager.cpp
(+77 files in other folders)
